Make text larger to prevent form input zoom on mobile

--- a/app/javascript/stylesheets/app-components.scss
+++ b/app/javascript/stylesheets/app-components.scss
@@ -16,7 +16,7 @@
   }
 
   .temp-form-style {
-    @apply border w-full border-gray-300  text-sm text-gray-600;
+    @apply border w-full border-gray-300 text-gray-600;
   }
   .underlined-form-style {
     @apply border-0 border-b-2 border-blue-400;
